--- a/styles.css
+++ b/styles.css
@@ -469,7 +469,7 @@ footer .install img {
 }
 footer .follow i:hover,
 footer a:hover {
-  color: #088178;
+  color: #023f3b;
 }
 footer .copyright {
   width: 100%;
@@ -599,10 +599,10 @@ footer .copyright {
   right: -60px;
 }
 #blog .blog-details a:hover {
-  color: #088178;
+  color: #000000;
 }
 #blog.blog-details a:hover::after {
-  background-color: #088178;
+  background-color: #011816;
 }
 #blog .blog-box h1 {
   position: absolute;
@@ -732,6 +732,13 @@ footer .copyright {
 #form-details form button {
   background-color: #088178;
   color: #fff;
+  margin-left: 300px;
+  cursor: pointer;
+  transition: all 0.7s ease;
+}
+#form-details form button :hover {
+  background-color: #088195;
+  transform: scale(1.05);
 }
 #form-details .people div {
   padding-bottom: 25px;
@@ -874,7 +881,7 @@ footer .copyright {
 
 #msg {
   color: #f70000;
-  margin-top: -20px;
+  margin-top: 20px;
   display: block;
 }
 
@@ -962,6 +969,12 @@ footer .copyright {
   }
   #form-details form {
     width: 50%;
+  }
+  #form-details form button {
+    margin-left: 40px;
+  }
+  #form-details form button :hover {
+    background-color: #088195;
   }
 }
 
@@ -1096,5 +1109,11 @@ footer .copyright {
   }
   #subtotal {
     width: 100%;
+  }
+  #form-details form button {
+    margin-left: 100px;
+  }
+  #form-details form button :hover {
+    background-color: #088195;
   }
 }
